output/balancer_p5_25_124/foundry_validation/F-001_Emergency_exits_permanently_invalidate_L/forge_stdout_attempt4.log
Compiler run failed:
Error (9429): This looks like an address but has an invalid checksum. Correct checksummed address: "0xbEbc44782C7dB0a1A60Cb6fe97d0b483032FF1C7". If this is not used as an address, please prepend '00'. For more information please see https://docs.soliditylang.org/en/develop/types.html#address-literals
SyntaxError: This looks like an address but has an invalid checksum. Correct checksummed address: "0xbEbc44782C7dB0a1A60Cb6fe97d0b483032FF1C7". If this is not used as an address, please prepend '00'. For more information please see https://docs.soliditylang.org/en/develop/types.html#address-literals
  --> src/FlawVerifier.sol:83:44:
   |
83 |     address private constant CURVE_3POOL = 0xbebc44782c7db0a1a60cb6fe97d0b483032ff1c7;
   |                                            ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

